Fix shifting links

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 
 ul {
     list-style-type: none;
+    height: 32px;
 }
 
 a {
